# Skyscrapers-4x4

./: .gitignore  CMakeLists.txt  skyscrapers.sln
.github/workflows/: cmake-single-platform.yml
Debug/: skyscrapers.ilk
include/: solver.h
skyscrapers/: skyscrapers.cpp  skyscrapers.vcxproj
skyscrapers/Debug/: skyscrapers.obj.enc  vc140.idb
skyscrapers/Debug/skyscrapers.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  skyscrapers.lastbuildstate
src/: main.cpp  skyscrapers.cpp  skyscrapers.vcxproj.filters  solver.cpp
tests/: CMakeLists.txt  solver_catch_test.cpp
